@@ -5,10 +5,13 @@
 * Version 1.5 (2006-XX-XX):
 
 - System-wide installation & per-user configuration.
-- More complete quiz result informations.
-- A quit button in the main window.
+- More complete quiz result informations (wrong answer recap).
 - Windows binary installation package.
 - New Russian translation (made by Aleksej R. Serdyukov).
+- No more learning flow disturbance within a quiz using text
+entry answer method. (IN PROGRESS).
+- Added Polivanov's kana cyrillization system (IN PROGRESS).
+- A quit button added in the main window.
 
 
 * Version 1.4b (2006-01-01):
